force-app/main/default/objects/eContacts__Queue_Item__c/eContacts__Queue_Item__c.object-meta.xml
<CustomObject>
    <label>Scan Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Queue Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Item</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>