force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Address_Zip__c</fullName>
    <label>Address Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>