force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Card_Image__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Card_Image__c</fullName>
    <label>Card Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>