force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__CardId__c.field-meta.xml
<CustomField>
    <fullName>eContacts__CardId__c</fullName>
    <label>CardId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>