force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__ContactId__c.field-meta.xml
<CustomField>
    <fullName>eContacts__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of any contact record created from this record</description>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>eContacts_Queue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>