force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Email__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>