force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Event_Data__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Event_Data__c</fullName>
    <label>Event Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>