force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__First_Name__c.field-meta.xml
<CustomField>
    <fullName>eContacts__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>