force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Language__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>