force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>