force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Mentioned_User_2__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Mentioned_User_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentioned User 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>eContacts_Queue_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>