force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Name__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>