force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Name_as_Int__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Name_as_Int__c</fullName>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name as Int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>