force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Notes__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>