force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__OCR_Data__c.field-meta.xml
<CustomField>
    <fullName>eContacts__OCR_Data__c</fullName>
    <label>OCR Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>