force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Phone_Fax__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Phone_Fax__c</fullName>
    <label>Phone_Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>