force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Phone_Mobile__c</fullName>
    <label>Phone_Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>