force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Processed__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>