force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Secondary_Image__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Secondary_Image__c</fullName>
    <label>Secondary Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>