force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Signature_Location__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Signature_Location__c</fullName>
    <label>Signature Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>