force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Title__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>