force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__type__c.field-meta.xml
<CustomField>
    <fullName>eContacts__type__c</fullName>
    <label>type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>