force-app/main/default/objects/eContacts__Queue_Item__c/fields/eContacts__Website__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Website__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>