force-app/main/default/objects/eContacts__Queue_Item__c/listViews/eContacts__All.listView-meta.xml
<ListView>
    <fullName>eContacts__All</fullName>
    <columns>eContacts__Processed__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>eContacts__OCR_Data__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>eContacts__type__c</columns>
    <columns>eContacts__Bundle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>